@startuml save_architecture
' Super Mario Plus - the four-layer persistence stack
' Verified against the source tree at commit b378acb.
' Matches: include/save/, include/core/SaveManager.h, src/save/

title Persistence — four layers, dependency injected

skinparam classAttributeIconSize 0

package "Layer 1 — data (plain, serialisable)" {
  class GameSaveData <<DTO>> {
    + bool isValid
    + SaveMetaData meta
    + PlayerSaveData p1
    + InventorySaveData inventory
    + LevelSaveData levelData
  }
  class SaveMetaData <<DTO>> {
    + int schemaVersion
    + int versionIndex
    + long long savedAtUnix
    + string savedAtText
    + int worldIndex
    + string levelId
    + string characterName
    + float playTimeSeconds
    + int coins, health, maxHealth
  }
  class PlayerSaveData <<DTO>> {
    + string characterName
    + float posX, posY
    + bool isFacingRight
    + int health, maxHealth
    + int mana, maxMana, breath
    + string storedItemSlot
  }
  class InventorySaveData <<DTO>> {
    + int coins
    + int keys
  }
  class LevelSaveData <<DTO>> {
    + string worldId, levelId, mapFilePath
    + int worldIndex
    + map<string, ItemState> persistedItemStates
    + set<string> persistedDeadEntities
  }
  class SaveSlotInfo <<DTO>> {
    + string filePath
    + int versionIndex
    + SaveMetaData meta
    + bool isValid
  }

  GameSaveData *-- SaveMetaData
  GameSaveData *-- PlayerSaveData
  GameSaveData *-- InventorySaveData
  GameSaveData *-- LevelSaveData
  SaveSlotInfo *-- SaveMetaData
}

note right of LevelSaveData
  This is what makes the world, and not
  just the player, restorable. Every
  object placed in a level carries a
  stable identifier from the level file;
  defeated enemies and changed items are
  recorded by that identifier.
end note

package "Layer 2 — facade" {
  class SaveManager <<singleton>> {
    - GameSaveData currentCheckpoint
    - bool hasCheckpointData
    - unique_ptr<ISaveRepository> repository_
    + {static} getInstance() : SaveManager&
    + setCheckpoint(GameSaveData)
    + getCheckpoint() : GameSaveData
    + clearCheckpoint()
    + listVersions(int worldIndex) : vector<SaveSlotInfo>
    + createVersion(int, GameSaveData, SaveSlotInfo&) : bool
    + loadVersion(SaveSlotInfo, GameSaveData&) : bool
    + deleteVersion(SaveSlotInfo) : bool
    + setRepository(unique_ptr<ISaveRepository>)
  }
}

package "Layer 3 — storage" {
  interface ISaveRepository {
    + {abstract} listVersions(int) : vector<SaveSlotInfo>
    + {abstract} createVersion(int, GameSaveData, SaveSlotInfo&) : bool
    + {abstract} loadVersion(SaveSlotInfo, GameSaveData&) : bool
    + {abstract} deleteVersion(SaveSlotInfo) : bool
  }
  class FileSaveRepository {
    - unique_ptr<ISaveSerializer> serializer_
    - string rootDir_
    + FileSaveRepository(unique_ptr<ISaveSerializer>, string)
  }
  ISaveRepository <|.. FileSaveRepository
}

package "Layer 4 — format" {
  interface ISaveSerializer {
    + {abstract} write(GameSaveData, path) : bool
    + {abstract} read(path, GameSaveData&) : bool
    + {abstract} readMeta(path, SaveMetaData&) : bool
  }
  class JsonSaveSerializer
  ISaveSerializer <|.. JsonSaveSerializer
}

class BaseLevelState {
  + createSaveData() : GameSaveData
  + restoreFromSaveData(GameSaveData)
  + onCheckpointReached()
}

BaseLevelState ..> GameSaveData : produces / consumes
BaseLevelState ..> SaveManager : requests a save
SaveManager *-- ISaveRepository : owns, injectable
FileSaveRepository *-- ISaveSerializer : owns, injected by constructor

note bottom of FileSaveRepository
  Writes go to a temporary file which is
  then renamed over the target. A rename
  is atomic, so a crash mid-write leaves
  the previous save intact instead of a
  truncated file.
end note

note bottom of SaveMetaData
  Each file begins with this small header
  so the load screen can list ten saves
  without parsing ten complete files.
end note

@enduml
